CSS: possible fix for “double scroll”

--- a/test.css
+++ b/test.css
@@ -23,6 +23,7 @@ div {
 
 .ui-mobile .ui-page-active {
     background-color: transparent;
+    overflow: hidden;
 }
 
 div.ui-page-active {
